--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" href=https://i.ibb.co/CKqj5Jq/OIP.jpg type="image/x-icon">
 <style>
     body,
     html {
