--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon" href=https://i.ibb.co/CKqj5Jq/OIP.jpg type="image/x-icon">
+<link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg
+    type="image/x-icon">
 <style>
     body,
     html {
@@ -43,7 +44,8 @@
 
     <div class="bgimg">
         <div class="topleft">
-            <img src="https://i.ibb.co/CKqj5Jq/OIP.jpg" alt="Logo" width="50%" height="50%">
+            <img src="https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg"
+                alt="Logo" width="50%" height="50%">
         </div>
         <div class="middle">
             <h1>COMING SOON</h1>
