--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="google-site-verification" content="hxJbKQXRBNYfLryeqijUfW1_t8_7kpxKCzj5zGnfn7U" />
 <link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg
     type="image/x-icon">
 <style>
