--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<meta name="google-site-verification" content="hxJbKQXRBNYfLryeqijUfW1_t8_7kpxKCzj5zGnfn7U" />
-<link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg
-    type="image/x-icon">
+<head>
+    <link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg type="image/x-icon">
+    <meta name="google-site-verification" content="hxJbKQXRBNYfLryeqijUfW1_t8_7kpxKCzj5zGnfn7U" />
+</head>
 <style>
     body,
     html {
