--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg type="image/x-icon">
     <meta name="google-site-verification" content="hxJbKQXRBNYfLryeqijUfW1_t8_7kpxKCzj5zGnfn7U" />
 </head>
-<meta http-equiv="Cache-Control" content="max-age=31536000"/>
+<meta http-equiv="Cache-control" content="max-age=31536000"/>
 <style>
     body,
     html {
