--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href=https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg type="image/x-icon">
+    <link rel="icon" href=https://silly-bot.vercel.app/assets/silly.jpg type="image/x-icon">
     <meta name="google-site-verification" content="hxJbKQXRBNYfLryeqijUfW1_t8_7kpxKCzj5zGnfn7U" />
 </head>
 <style>
@@ -12,7 +12,7 @@
     }
 
     .bgimg {
-        background-image: url('https://www.w3schools.com/w3images/forestbridge.jpg');
+        background-image: url('https://silly-bot.vercel.app/assets/forestbridge.jpg');
         height: 100%;
         background-position: center;
         background-size: cover;
@@ -46,7 +46,7 @@
 
     <div class="bgimg">
         <div class="topleft">
-            <img src="https://raw.githubusercontent.com/TheScientist101/Silly-Bot/main/website/assets/silly.jpg"
+            <img src="https://silly-bot.vercel.app/assets/silly.jpg"
                 alt="Logo" width="50%" height="50%">
         </div>
         <div class="middle">
