--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,84 @@
 <!DOCTYPE html>
-<html>
-<p><iframe src="https://appetize.io/embed/8tu5whkm6b95qx3m8ta1wfzj28/?device=pixel4" width="300px" height="635px" frameborder="0" scrolling="no"></iframe></p>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Silly Bot</title>
+    <meta name="description" content="Silly Bot is an open source discord bot that is silly.">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Features-Blue.css">
+<link href="favicon.jpg" rel="icon">
+</head>
+
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="56">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand" href="/#page-top">Silly Bot</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler float-end" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="https://discord.com/api/oauth2/authorize?client_id=830148003985752095&amp;permissions=8&amp;scope=bot">Add to your server</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead" style="background: url('assets/img/bg-pattern.png'), linear-gradient(to left, #7b4397, #dc2430);">
+        <div class="container h-100">
+            <div class="row h-100">
+                <div class="col-lg-7 my-auto">
+                    <div class="mx-auto header-content">
+                        <h1 class="mb-5">Silly Bot is an open source discord bot that is silly.</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://discord.com/api/oauth2/authorize?client_id=830148003985752095&amp;permissions=8&amp;scope=bot">Start Now for Free!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="cta" style="background-image:url('assets/img/bg-cta.jpg');">
+        <div class="cta-content">
+            <div class="container">
+                <h2>Stop being bored.<br>Start having fun.<br></h2><a class="btn btn-outline-warning btn-xl" role="button" href="https://discord.com/api/oauth2/authorize?client_id=830148003985752095&amp;permissions=8&amp;scope=bot">Let's Get Started!</a>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
+    <section class="contact-clean">
+        <form data-bss-subject="Silly Bot Contact" data-bss-recipient="8bf9ccc01a1b3840d32e4e884a725c7e">
+            <h2 class="text-center">Contact The Developer</h2>
+            <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+            <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
+            <div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
+            <div class="mb-3"><button class="btn btn-primary" type="submit">send </button></div>
+        </form>
+    </section>
+    <section class="bg-primary contact" id="contact">
+        <div class="container">
+            <h2><span>We&nbsp;</span><i class="fa fa-heart"></i><span>&nbsp;new friends!</span></h2>
+            <ul class="list-inline list-social">
+                <li class="list-inline-item social-twitter"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-twitter"></i></a></li>
+                <li class="list-inline-item social-facebook"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-facebook"></i></a></li>
+                <li class="list-inline-item social-google-plus"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><i class="fa fa-google-plus"></i></a></li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>©&nbsp;Silly Bot 2021. All Rights Reserved.</p>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Privacy</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
+    <script src="assets/js/new-age.js"></script>
+</body>
+
 </html>
