--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="overlay"></div>
     </section>
-    <section class="contact-clean">
+    <section id="contact" class="contact-clean">
         <form data-bss-subject="Silly Bot Contact" data-bss-recipient="8bf9ccc01a1b3840d32e4e884a725c7e">
             <h2 class="text-center">Contact The Developer</h2>
             <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
@@ -56,7 +56,7 @@
             <div class="mb-3"><button class="btn btn-primary" type="submit">send </button></div>
         </form>
     </section>
-    <section class="bg-primary contact" id="contact">
+    <section class="bg-primary contact">
         <div class="container">
             <h2><span>We&nbsp;</span><i class="fa fa-heart"></i><span>&nbsp;new friends!</span></h2>
             <ul class="list-inline list-social">
