--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Blue.css">
-<link href="favicon.jpg" rel="icon">
+<link href="assets/img/favicon.jpg" rel="icon">
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="56">
